--- a/frontend/web/index/css/stylish-portfolio.css
+++ b/frontend/web/index/css/stylish-portfolio.css
@@ -46,8 +46,8 @@ body {
 
 .btn-light {
     border-radius: 0;
-    color: #333;
-    background-color: rgb(255,255,255);
+    color: #fff;
+    background-color: #222;
 }
 
 .btn-light:hover,
@@ -68,10 +68,10 @@ hr.small {
 #sidebar-wrapper {
     z-index: 1000;
     position: fixed;
-    right: 0;
+    left: 0;
     width: 250px;
     height: 100%;
-    transform: translateX(250px);
+    transform: translateX(-250px);
     overflow-y: auto;
     background: #222;
     -webkit-transition: all 0.4s ease 0s;
@@ -131,11 +131,11 @@ hr.small {
     z-index: 1;
     position: fixed;
     top: 0;
-    right: 0;
+    left: 0;
 }
 
 #sidebar-wrapper.active {
-    right: 250px;
+    left: 250px;
     width: 250px;
     -webkit-transition: all 0.4s ease 0s;
     -moz-transition: all 0.4s ease 0s;
@@ -145,7 +145,7 @@ hr.small {
 }
 
 .toggle {
-    margin: 5px 5px 0 0;
+    margin:1%;
 }
 
 /* Header */
