--- a/frontend/web/index/css/stylish-portfolio.css
+++ b/frontend/web/index/css/stylish-portfolio.css
@@ -90,16 +90,22 @@ hr.small {
     list-style: none;
 }
 
+
+
 .sidebar-nav li {
-    text-indent: 20px;
+    
     line-height: 40px;
+    
 }
 
 .sidebar-nav li a {
     display: block;
     text-decoration: none;
     color: #999;
+    text-align: right;
+    padding-right: 15%;
 }
+
 
 .sidebar-nav li a:hover {
     text-decoration: none;
