--- a/frontend/web/index/css/stylish-portfolio.css
+++ b/frontend/web/index/css/stylish-portfolio.css
@@ -20,13 +20,25 @@ body {
     display: table-cell;
     text-align: center;
     vertical-align: middle;
+    line-height: 5;
+    
 }
 
 .text-vertical-center h1 {
     margin: 0;
     padding: 0;
-    font-size: 4.5em;
+    font-size: 10vw;
     font-weight: 700;
+    color:#eee;
+    line-height: 1.5;
+}
+.text-vertical-center h3 {
+    margin: 0;
+    padding: 0;
+    font-size: 5vw;
+    font-weight: 700;
+    color:#eee;
+    line-height: 1.5;
 }
 
 /* Custom Button Styles */
@@ -154,18 +166,25 @@ hr.small {
     margin:1%;
 }
 
-/* Header */
 
-.header {
-    display: table;
-    position: relative;
-    width: 100%;
-    height: 100%;
-    background: url(/img/bg.jpg) no-repeat center center scroll;
+.video-section .pattern-overlay {
+background-color: rgba(37,50,80,.7);
+min-height: 100vh;
+display: table;
+position: relative;
+width: 100%;
+}
+/* Incase of overlay problems just increase the min-height*/
+
+.video-section .buttonBar{display:none;}
+.player {font-size: 1px;}
+
+.video-section{
+   background: url(/img/bg.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
-    -o-background-size: cover;
+    -o-background-size: cover;   
 }
 
 /* About */
