--- a/frontend/web/index/css/stylish-portfolio.css
+++ b/frontend/web/index/css/stylish-portfolio.css
@@ -21,12 +21,9 @@ body {
     text-align: center;
     vertical-align: middle;
     line-height: 5;
-    
-
 }
 
 .text-vertical-center h1 {
-    /*margin: 5%;*/
     padding: 0;
     font-size: 10vw;
     font-weight: 700;
@@ -36,6 +33,12 @@ body {
              0px 24px 2px rgba(0,0,0,0.1),
              0px 34px 30px rgba(0,0,0,0.1);
     
+}
+.text-vertical-center h2 {
+    padding: 0;
+    font-size: 5vw;
+    font-weight: 700;
+    color:#fff;   
 }
 .text-vertical-center h3 {
     margin: 0;
@@ -263,8 +266,17 @@ width: 100%;
     padding: 50px 0;
 }
 
+.bg-primary{
+    background-color: #E06540;
+    color:#fff;
+}
+
 .service-item {
     margin-bottom: 30px;
+}
+
+.icon-orange{
+    color:#E06540;
 }
 
 /* Callout */
