--- a/frontend/web/index/css/stylish-portfolio.css
+++ b/frontend/web/index/css/stylish-portfolio.css
@@ -301,14 +301,50 @@ width: 100%;
 
 .portfolio-item {
     margin-bottom: 30px;
+    position:relative;
+    overflow:hidden;
+   
 }
 
 .img-portfolio {
     margin: 0 auto;
+    width: 100%;
 }
 
-.img-portfolio:hover {
-    opacity: 0.8;
+.caption {
+    position:absolute;
+    top:-100%;
+    right:0;
+    background:rgba(253,255,189, 0.75);
+    width:100%;
+    height:100%;
+    padding:2%;
+    text-align:center;
+    color:#E06540 !important;
+    z-index:2;
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    -ms-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+}
+
+.caption h4{
+    font-size: 2vw;
+    font-weight: 700;
+}
+
+.caption p {
+    font-size: 1vw;
+    font-weight: 500;
+}
+
+.caption p a{
+    padding: 2%;
+}
+
+.portfolio-item:hover .caption {
+    top:0%;
 }
 
 /* Call to Action */
