--- a/frontend/web/index/css/stylish-portfolio.css
+++ b/frontend/web/index/css/stylish-portfolio.css
@@ -26,14 +26,15 @@ body {
 }
 
 .text-vertical-center h1 {
+    
     padding: 0;
     font-size: 10vw;
     font-weight: 700;
     color:#E06540;
-    text-shadow: 0px 3px 0px #b2a98f,
+    /*text-shadow: 0px 3px 0px #b2a98f,
              0px 14px 10px rgba(0,0,0,0.15),
              0px 24px 2px rgba(0,0,0,0.1),
-             0px 34px 30px rgba(0,0,0,0.1);
+             0px 34px 30px rgba(0,0,0,0.1);*/
     
 }
 .text-vertical-center h2 {
@@ -48,10 +49,10 @@ body {
     font-size: 5vw;
     font-weight: 700;
     color:#E06540;
-        text-shadow: 0px 3px 0px #b2a98f,
+      /*  text-shadow: 0px 3px 0px #b2a98f,
              0px 14px 10px rgba(0,0,0,0.15),
              0px 24px 2px rgba(0,0,0,0.1),
-             0px 34px 30px rgba(0,0,0,0.1);
+             0px 34px 30px rgba(0,0,0,0.1);*/
     
 }
 
@@ -60,17 +61,35 @@ body {
 }
 
 .header-buttom{
-    padding: 2% 2% 0 2%;
-    color:#222;
+    position: absolute;
+    
+    right:45%;
+    bottom: 0;
+    margin-bottom: 7%;
+    padding: 1% 2%;
     display:inline-block;
-    font-size: 3vw;
+    font-size: 5vw;
     font-weight: 700;
     color:#E06540;
+    border: 3px solid #E06540;
+    border-radius: 50%;
+    line-height: 1;
+     -webkit-transition: all 0.4s ease 0s;
+    -moz-transition: all 0.4s ease 0s;
+    -ms-transition: all 0.4s ease 0s;
+    -o-transition: all 0.4s ease 0s;
+    transition: all 0.4s ease 0s;
+    
     
 }
 .header-buttom:hover{
-   
-   color:#E06540;
+   background-color: #E06540;
+   color:#FCFCF3;
+    -webkit-transition: all 0.4s ease 0s;
+    -moz-transition: all 0.4s ease 0s;
+    -ms-transition: all 0.4s ease 0s;
+    -o-transition: all 0.4s ease 0s;
+    transition: all 0.4s ease 0s;
    
 }
 @media(max-width:768px) {
@@ -237,11 +256,7 @@ hr.small {
 
 
 .video-section .pattern-overlay {
-    background-color: rgba(130,215,142,.3);
-background: -moz-linear-gradient(45deg, rgba(248,251,206,0.15) 0%, rgba(243,247,126,0.4) 100%); 
-background: -webkit-linear-gradient(45deg, rgba(248,251,206,0.15) 0%,rgba(243,247,126,0.4) 100%); 
-background: linear-gradient(45deg, rgba(248,251,206,0.15) 0%,rgba(243,247,126,0.4) 100%); 
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#26f8fbce', endColorstr='#66f3f77e',GradientType=1 );
+background-color: rgba(250,250,200, .2);
 
 min-height: 100vh;
 display: table;
@@ -317,6 +332,7 @@ width: 100%;
 .img-portfolio {
     margin: 0 auto;
     width: 100%;
+    height: 30vh;
 }
 
 .caption {
