--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -109,3 +109,11 @@ a.desc:after {
 .nav > li > form > button:hover {
     text-decoration: none;
 }
+
+.item-post{
+    margin: 1%;
+    border: 2px solid #eee;
+    border-radius: 3%;
+    padding: 3%;
+    background-color: #fff;
+}
