--- a/frontend/web/index/css/stylish-portfolio.css
+++ b/frontend/web/index/css/stylish-portfolio.css
@@ -5,9 +5,7 @@
  */
 
 /* Global Styles */
-*::selection{
-    background-color: #D0FF00;
-}
+
 html,
 body {
     width: 100%;
@@ -15,7 +13,8 @@ body {
 }
 
 body {
-    font-family: "Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: 'PT Sans', sans-serif;
+    letter-spacing: 0.1vw;
 }
 
 .text-vertical-center {
@@ -28,13 +27,14 @@ body {
 .text-vertical-center h1 {
     
     padding: 0;
-    font-size: 10vw;
+    font-size: 8vw;
     font-weight: 700;
     color:#C74C27;
-    /*text-shadow: 0px 3px 0px #b2a98f,
+    letter-spacing: 0.3vw;
+    text-shadow: 0px 3px 0px #b2a98f,
              0px 14px 10px rgba(0,0,0,0.15),
              0px 24px 2px rgba(0,0,0,0.1),
-             0px 34px 30px rgba(0,0,0,0.1);*/
+             0px 34px 30px rgba(0,0,0,0.1);
     
 }
 .text-vertical-center h2 {
@@ -45,14 +45,14 @@ body {
 }
 .text-vertical-center h3 {
     margin: 0;
-    padding: 0;
-    font-size: 5vw;
+    padding: 1vw;
+    font-size: 3vw;
     font-weight: 700;
     color:#C74C27;
-      /*  text-shadow: 0px 3px 0px #b2a98f,
+      text-shadow: 0px 3px 0px #b2a98f,
              0px 14px 10px rgba(0,0,0,0.15),
              0px 24px 2px rgba(0,0,0,0.1),
-             0px 34px 30px rgba(0,0,0,0.1);*/
+             0px 34px 30px rgba(0,0,0,0.1);
     
 }
 
@@ -94,7 +94,15 @@ body {
 }
 @media(max-width:768px) {
     .header-buttom {
-        font-size: 7vw;
+        font-size: 15vw;
+        right:40%;
+        padding: 1% 4%;
+    }
+    .text-vertical-center h3{
+        font-size: 8vw;
+    }
+    .text-vertical-center h1{
+        font-size: 13vw;
     }
 }
 
@@ -256,7 +264,7 @@ hr.small {
 
 
 .video-section .pattern-overlay {
-background-color: rgba(250,250,200, .2);
+background-color: rgba(250,250,150, .2);
 
 min-height: 100vh;
 display: table;
@@ -270,7 +278,7 @@ width: 100%;
 .player {font-size: 1px;}
 
 .video-section{
-   background: url(/img/score-bg.jpg) no-repeat center center scroll;
+   background: url(/img/bg-header.jpg) no-repeat center center ;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -281,6 +289,9 @@ width: 100%;
 
 .about {
     padding: 10% 0;
+}
+.about{
+    color:#666;
 }
 
 /* Services */
@@ -312,11 +323,11 @@ width: 100%;
 .service-item ul{
     list-style: none;
     padding-left: 0;
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
 
 .service-item h4{
-    font-size: 3rem;
+    font-size: 2.5rem;
 }
 
 .icon-orange{
@@ -373,20 +384,21 @@ width: 100%;
     margin-bottom: 30px;
     position:relative;
     overflow:hidden;
-   
+    height: 30vh;
+    width: 100%;
 }
 
 .img-portfolio {
     margin: 0 auto;
-    width: 100%;
-    height: 30vh;
+    //width: 100%;
+    
 }
 
 .caption {
     position:absolute;
     top:-100%;
     right:0;
-    background:rgba(253,255,189, 0.75);
+    background:rgba(253,255,123, 0.9);
     width:100%;
     height:100%;
     padding:2%;
@@ -401,13 +413,14 @@ width: 100%;
 }
 
 .caption h4{
-    font-size: 2vw;
+    font-size: 3rem;
     font-weight: 700;
 }
 
 .caption p {
-    font-size: 1vw;
+    font-size: 1.7rem;
     font-weight: 500;
+    color:#333 !important;
 }
 
 .caption p a{
