--- a/frontend/web/index/css/stylish-portfolio.css
+++ b/frontend/web/index/css/stylish-portfolio.css
@@ -360,15 +360,41 @@ width: 100%;
 .callout {
     display: table;
     width: 100%;
-    height: 400px;
+    height: 450px;
     color: #fff;
-    background: url(/img/callout.jpg) no-repeat center center scroll;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
+    overflow: hidden;
+    position: relative;
+    
 }
 
+
+
+.overflow-scroll{
+    position: absolute;
+    top:-25%;
+    left: 0;
+    width:150%;
+    height: 150%;
+    background: url(/img/IMG_20161103_182657.jpg) no-repeat ;
+    -webkit-background-size: 100% 100%;
+   /* -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;*/
+    
+      
+}
+
+.text-vertical-center .scrollflow{
+    font-size: 6rem;
+}
+
+.overflow-bg{
+   background-color: rgba(182,59,13,.2);
+   position: absolute;
+   height: 100%;
+   top:0;
+   width: 100%;
+}
 /* Portfolio */
 
 .portfolio {
