--- a/frontend/web/index/css/stylish-portfolio.css
+++ b/frontend/web/index/css/stylish-portfolio.css
@@ -18,9 +18,12 @@ body {
 }
 
 .text-vertical-center {
-    display: table-cell;
-    text-align: center;
-    vertical-align: middle;
+   position: absolute;
+   top:20%;
+   display: block;
+   width: 100%;
+   margin: auto;
+   
    
 }
 
@@ -60,38 +63,7 @@ body {
     
 }
 
-.header-buttom{
-    position: absolute;
-    
-    right:45%;
-    bottom: 0;
-    margin-bottom: 7%;
-    padding: 1% 2%;
-    display:inline-block;
-    font-size: 5vw;
-    font-weight: 700;
-    color:#C74C27;
-    border: 3px solid #E06540;
-    border-radius: 50%;
-    line-height: 1;
-     -webkit-transition: all 0.4s ease 0s;
-    -moz-transition: all 0.4s ease 0s;
-    -ms-transition: all 0.4s ease 0s;
-    -o-transition: all 0.4s ease 0s;
-    transition: all 0.4s ease 0s;
-    
-    
-}
-.header-buttom:hover{
-   background-color: #C74C27;
-   color:#FCFCF3;
-    -webkit-transition: all 0.4s ease 0s;
-    -moz-transition: all 0.4s ease 0s;
-    -ms-transition: all 0.4s ease 0s;
-    -o-transition: all 0.4s ease 0s;
-    transition: all 0.4s ease 0s;
-   
-}
+
 @media(max-width:768px) {
     .header-buttom {
         font-size: 15vw;
@@ -109,165 +81,24 @@ body {
 /* Custom Button Styles */
 
 
-.btn-orange{
-   border-radius: 10%;
-    color: #fff;
-    background-color: rgba(224,101,64,0.7); 
-}
-
-.btn-orange:hover,
-.btn-orange:focus,
-.btn-orange:active {
-    color: #fff;
-    background-color: rgba(224,101,64,1);
-}
-
-.btn-orange-close{
-   border-radius: 50%;
-   color: #fff;
-   background-color: #222; 
-}
-
-.btn-orange-close:hover,
-.btn-orange-close:focus,
-.btn-orange-close:active {
-    color: #fff;
-    background-color: #E06540;
-}
-
-.btn-dark {
-    border-radius: 0;
-    color: #fff;
-    background-color: rgba(0,0,0,0.4);
-    padding: 1.5%;
-    font-size: 2rem;
-}
-
-.btn-dark:hover,
-.btn-dark:focus,
-.btn-dark:active {
-    color: #fff;
-    background-color: rgba(0,0,0,0.7);
-}
-
-.btn-light {
-    border-radius: 0;
-    color: #fff;
-    background-color: #222;
-}
-
-.btn-light:hover,
-.btn-light:focus,
-.btn-light:active {
-    color: #333;
-    background-color: rgba(255,255,255,0.8);
-}
 
 /* Custom Horizontal Rule */
 
 hr.small {
-    max-width: 100px;
-}
-
-/* Side Menu */
-
-#sidebar-wrapper {
-    z-index: 1000;
-    position: fixed;
-    left: 0;
-    width: 250px;
-    height: 100%;
-    transform: translateX(-250px);
-    overflow-y: auto;
-    background: #222;
-    -webkit-transition: all 0.4s ease 0s;
-    -moz-transition: all 0.4s ease 0s;
-    -ms-transition: all 0.4s ease 0s;
-    -o-transition: all 0.4s ease 0s;
-    transition: all 0.4s ease 0s;
-}
-
-.sidebar-nav {
-    position: absolute;
-    top: 0;
-    width: 250px;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    font-size: 1.75rem;
+    max-width: 50vw;
+    border-top: 2px solid #eee;
+    height: 10px;
 }
 
 
 
-.sidebar-nav li {
-    
-    line-height: 40px;
-    
-}
-
-.sidebar-nav li a {
-    display: block;
-    text-decoration: none;
-    color: #999;
-    text-align: right;
-    padding-right: 15%;
-}
-
-
-.sidebar-nav li a:hover {
-    text-decoration: none;
-    color: #E06540;
-    border-right:5px solid #E06540;
-}
-
-.sidebar-nav li a:active,
-.sidebar-nav li a:focus {
-    text-decoration: none;
-}
-
-.sidebar-nav > .sidebar-brand {
-    height: 55px;
-    font-size: 18px;
-    line-height: 55px;
-}
-
-.sidebar-nav > .sidebar-brand a {
-    color: #999;
-}
-
-.sidebar-nav > .sidebar-brand a:hover {
-    color: #E06540;
-    background: none;
-    border:none;
-}
-
-#menu-toggle {
-    z-index: 1;
-    position: fixed;
-    top: 0;
-    left: 0;
-}
-
-#sidebar-wrapper.active {
-    left: 250px;
-    width: 250px;
-    -webkit-transition: all 0.4s ease 0s;
-    -moz-transition: all 0.4s ease 0s;
-    -ms-transition: all 0.4s ease 0s;
-    -o-transition: all 0.4s ease 0s;
-    transition: all 0.4s ease 0s;
-}
-
-.toggle {
-    margin:1%;
-}
 
 
 .video-section .pattern-overlay {
 background-color: rgba(250,250,150, .2);
 
 min-height: 100vh;
-display: table;
+text-align: center;
 position: relative;
 width: 100%;
 
@@ -297,7 +128,8 @@ width: 100%;
 /* Services */
 
 .services {
-    padding: 50px 0;
+    padding: 5% 0;
+    
     position: relative;
 }
 .services:before{
@@ -323,11 +155,16 @@ width: 100%;
 .service-item ul{
     list-style: none;
     padding-left: 0;
-    font-size: 1.5rem;
+    font-size: 1.9rem;
+}
+.service-item ul li{
+    padding-bottom: 2%;
+    display: inline-block;
 }
 
 .service-item h4{
     font-size: 2.5rem;
+    padding-bottom: 4%;
 }
 
 .icon-orange{
@@ -350,6 +187,9 @@ width: 100%;
 .fa-stack-2x{
     font-size: 3em !important;
 }
+.fa-5x{
+    font-size: 4em !important;
+}
 
 
 
@@ -358,13 +198,13 @@ width: 100%;
 /* Callout */
 
 .callout {
-    display: table;
+   
     width: 100%;
     height: 450px;
     color: #fff;
     overflow: hidden;
     position: relative;
-    
+    text-align: center;
 }
 
 
@@ -375,21 +215,28 @@ width: 100%;
     left: 0;
     width:150%;
     height: 150%;
-    background: url(/img/IMG_20161103_182657.jpg) no-repeat ;
-    -webkit-background-size: 100% 100%;
-   /* -moz-background-size: cover;
+    background: url(/img/bg-score.jpg) no-repeat center center ;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
     background-size: cover;
-    -o-background-size: cover;*/
+    -o-background-size: cover;
     
       
 }
 
-.text-vertical-center .scrollflow{
-    font-size: 6rem;
+.text-vertical-callout h2{
+   font-size: 6rem;
+   position: absolute;
+   top:35%;
+   display: block;
+   width: 100%;
+   margin: auto;
+   color: #C74C27;
+   font-weight: 600;
 }
 
 .overflow-bg{
-   background-color: rgba(182,59,13,.2);
+   background-color:  rgba(255,255,100, .5);
    position: absolute;
    height: 100%;
    top:0;
@@ -404,6 +251,11 @@ width: 100%;
 #portfolio{
    background-color: #FCFCF3;
    padding-bottom: 10%;
+}
+
+#article{
+    background-color: #FCFCF3;
+    padding-bottom: 10%;
 }
 
 .portfolio-item {
@@ -540,15 +392,4 @@ width: 100%;
     pointer-events: none;
 }
 
-/* Footer */
 
-footer {
-    padding: 100px 0;
-}
-
-#to-top {
-  display: none;
-  position: fixed;
-  bottom: 5px;
-  right: 5px;
-}
