--- a/frontend/web/index/css/stylish-portfolio.css
+++ b/frontend/web/index/css/stylish-portfolio.css
@@ -17,27 +17,39 @@ body {
     letter-spacing: 0.1vw;
 }
 
+.top-phone{
+    position: absolute;
+    top:0;
+    right:0;
+    font-size: 2.5rem;
+    padding: 2%;
+    color:#C74C27;
+    
+}
+
 .text-vertical-center {
    position: absolute;
-   top:20%;
+   top:15%;
    display: block;
    width: 100%;
    margin: auto;
-   
+  text-shadow: 4px 0 0 #fff, -4px 0 0 #fff, 0 4px 0 #fff, 0 -4px 0 #fff, 2px 2px #fff, -2px -2px 0 #fff, 2px -2px 0 #fff, -2px 2px 0 #fff;
    
 }
 
 .text-vertical-center h1 {
     
-    padding: 0;
-    font-size: 8vw;
+    
+    font-size: 10rem;
     font-weight: 700;
     color:#C74C27;
     letter-spacing: 0.3vw;
-    text-shadow: 0px 3px 0px #b2a98f,
+    /*text-shadow: 0px 3px 0px #b2a98f,
              0px 14px 10px rgba(0,0,0,0.15),
              0px 24px 2px rgba(0,0,0,0.1),
-             0px 34px 30px rgba(0,0,0,0.1);
+             0px 34px 30px rgba(0,0,0,0.1);*/
+    
+   
     
 }
 .text-vertical-center h2 {
@@ -47,16 +59,15 @@ body {
     color:#fff;   
 }
 .text-vertical-center h3 {
+  
     margin: 0;
-    padding: 1vw;
-    font-size: 3vw;
+    padding: 3%;
+    line-height: 1.3;
+    font-size: 4rem;
     font-weight: 700;
     color:#C74C27;
-      text-shadow: 0px 3px 0px #b2a98f,
-             0px 14px 10px rgba(0,0,0,0.15),
-             0px 24px 2px rgba(0,0,0,0.1),
-             0px 34px 30px rgba(0,0,0,0.1);
     
+     
 }
 
 .text-vertical-center a{
@@ -95,7 +106,7 @@ hr.small {
 
 
 .video-section .pattern-overlay {
-background-color: rgba(250,250,150, .2);
+background-color: rgba(250,250,250, .1);
 
 min-height: 100vh;
 text-align: center;
@@ -113,7 +124,8 @@ width: 100%;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
-    -o-background-size: cover;   
+    -o-background-size: cover;
+   
 }
 
 /* About */
@@ -236,7 +248,7 @@ width: 100%;
 }
 
 .overflow-bg{
-   background-color:  rgba(255,255,100, .5);
+   background-color:  rgba(255,255,250, .5);
    position: absolute;
    height: 100%;
    top:0;
