--- a/frontend/web/index/css/stylish-portfolio.css
+++ b/frontend/web/index/css/stylish-portfolio.css
@@ -33,8 +33,8 @@ body {
    display: block;
    width: 100%;
    margin: auto;
-  text-shadow: 4px 0 0 #fff, -4px 0 0 #fff, 0 4px 0 #fff, 0 -4px 0 #fff, 2px 2px #fff, -2px -2px 0 #fff, 2px -2px 0 #fff, -2px 2px 0 #fff;
-   
+  text-shadow: 4px 0 0 #FFFFEF, -4px 0 0 #FFFFEF, 0 4px 0 #FFFFEF, 0 -4px 0 #FFFFEF, 2px 2px #FFFFEF, -2px -2px 0 #FFFFEF, 2px -2px 0 #FFFFEF, -2px 2px 0 #FFFFEF;
+   letter-spacing: 0.3vw;
 }
 
 .text-vertical-center h1 {
@@ -43,7 +43,7 @@ body {
     font-size: 10rem;
     font-weight: 700;
     color:#C74C27;
-    letter-spacing: 0.3vw;
+    letter-spacing: 0.7vw;
     /*text-shadow: 0px 3px 0px #b2a98f,
              0px 14px 10px rgba(0,0,0,0.15),
              0px 24px 2px rgba(0,0,0,0.1),
@@ -63,7 +63,7 @@ body {
     margin: 0;
     padding: 3%;
     line-height: 1.3;
-    font-size: 4rem;
+    font-size: 5rem;
     font-weight: 700;
     color:#C74C27;
     
@@ -106,7 +106,16 @@ hr.small {
 
 
 .video-section .pattern-overlay {
-background-color: rgba(250,250,250, .1);
+background:transparent;   
+background-image: -moz-linear-gradient(top, rgba(255,255,143,0.1) 0%, rgba(250,250,143,0.2) 100%); /* FF3.6-15 */
+background-image: -webkit-linear-gradient(top, rgba(255,255,143,0.1) 0%,rgba(250,250,143,0.2) 100%); /* Chrome10-25,Safari5.1-6 */
+background-image: linear-gradient(to bottom, rgba(255,255,143,0.1) 0%,rgba(250,250,143,0.2) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#99ffffff', endColorstr='#33fafa8f',GradientType=0 );
+
+-moz-box-shadow: inset 0px -2px 0 #FAFA8F;
+    -webkit-box-shadow: inset 0px -2px 0 #FAFA8F;
+    -o-box-shadow: inset 0px -2px 0 #FAFA8F;
+    box-shadow: inset 0px -1px 2px #FAFA8F;
 
 min-height: 100vh;
 text-align: center;
@@ -114,6 +123,8 @@ position: relative;
 width: 100%;
 
 }
+
+
 /* Incase of overlay problems just increase the min-height*/
 
 .video-section .buttonBar{display:none;}
