--- a/frontend/web/index/css/stylish-portfolio.css
+++ b/frontend/web/index/css/stylish-portfolio.css
@@ -13,7 +13,7 @@ body {
 }
 
 body {
-    font-family: 'PT Sans', sans-serif;
+    font-family: 'Andika', sans-serif;
     letter-spacing: 0.1vw;
 }
 
@@ -23,7 +23,7 @@ body {
     right:0;
     font-size: 2.5rem;
     padding: 2%;
-    color:#C74C27;
+    color:#AD4222;
     
 }
 
@@ -42,7 +42,7 @@ body {
     
     font-size: 10rem;
     font-weight: 700;
-    color:#C74C27;
+    color:#AD4222;
     letter-spacing: 0.7vw;
     /*text-shadow: 0px 3px 0px #b2a98f,
              0px 14px 10px rgba(0,0,0,0.15),
@@ -65,7 +65,7 @@ body {
     line-height: 1.3;
     font-size: 5rem;
     font-weight: 700;
-    color:#C74C27;
+    color:#AD4222;
     
      
 }
@@ -162,13 +162,13 @@ width: 100%;
     content: '';
     right:0;
     border-style: solid;
-    border-color: transparent transparent #C74C27;
+    border-color: transparent transparent #AD4222;
     border-width: 0px 0px 5.1vw 100vw;
     top: -5vw;
 }
 
 .bg-primary{
-    background-color: #C74C27;
+    background-color: #AD4222;
     color:#fff;
 }
 
@@ -191,7 +191,7 @@ width: 100%;
 }
 
 .icon-orange{
-    color:#C74C27;
+    color:#AD4222;
     font-size: 10rem;
     position: absolute;
     text-align: center;
@@ -255,7 +255,7 @@ width: 100%;
    width: 100%;
    padding: 0 5%;
    margin: auto;
-   color: #C74C27;
+   color: #AD4222;
    font-weight: 600;
    
 }
@@ -275,7 +275,7 @@ width: 100%;
 
 
 .main-capition-text {
-    padding: 10% 5% 10% 20%;
+    padding: 10% 5% 15% 20%;
     color: #555;
    font-weight: 600;
    font-size: 2.5rem;
@@ -288,11 +288,24 @@ width: 100%;
 
 .portfolio {
     padding: 50px 0;
+    position: relative;
 }
 
 #portfolio{
    background-color: #FCFCF3;
    padding-bottom: 10%;
+}
+
+#portfolio:before{
+    width: 0;
+    height: 0;
+    position: absolute;
+    content: '';
+    right:0;
+    border-style: solid;
+    border-color: transparent  #FCFCF3;
+    border-width: 10.1vw  0px 0px  100vw;
+    top: -10vw;
 }
 
 #article{
@@ -378,7 +391,7 @@ width: 100%;
 }
 
 #lightSlider{
-    color :#C74C27;
+    color :#AD4222;
 }
 
 .slideControls{
@@ -390,7 +403,7 @@ width: 100%;
 }
 .slideControls  i{
     font-size:5rem;
-    color :#C74C27;
+    color :#AD4222;
     
     
   }
