--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -192,3 +192,20 @@ a.desc:after {
           padding: 3%; 
       }
       
+      /*PAGINATION*/
+      .pagination > li{
+         display: inline-block;
+      }  
+      .pagination > li > a, .pagination > li > span{
+          color:#AD4222;
+          border-radius: 50%;
+      }
+      .pagination > .active > a, .pagination > .active > span, .pagination > .active > a:hover, .pagination > .active > span:hover, .pagination > .active > a:focus, .pagination > .active > span:focus{
+          background-color: #AD4222;
+          border-color:#AD4222;
+      }
+      .pagination > li > a:hover, .pagination > li > span:hover, .pagination > li > a:focus, .pagination > li > span:focus{
+          background-color: #AD4222;
+          border-color:#AD4222;
+          color:#fff;
+      }      
